--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     </div>
                 </div>
                 <video id="vid" poster="assets/images/thumbnail_1.png">
-                    <source src="assets/videos/wedding.mp4" type="video/mp4">
+                    <source src="https://onedrive.live.com/download?cid=B16FC179C21FE084&resid=B16FC179C21FE084%215106&authkey=ADCbavLanfLytjw" type="video/mp4">
                 </video>
             </div>
         </div>
