--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
                         </p>
                         <p class="action-items">
                             <span class="button" style="background-image: url(assets/images/maps.jpg)">
-                                <a href="">Xem bản đồ</a>
+                                <a target="_blank" href="https://calendar.google.com/event?action=TEMPLATE&amp;tmeid=MzU5ZmJtYm82NW5ldGJiOWQyaDIxaGxhZDAgZHVuZ2JhLnNnQG0&amp;tmsrc=dungba.sg%40gmail.com">Xem bản đồ</a>
                             </span>
                             <span class="button" style="background-image: url(assets/images/calendar.png)">
-                                <a href="">Thêm vào lịch</a>
+                                <a href="" target="_blank">Thêm vào lịch</a>
                             </span>
                         </p>
                     </div>
