--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                             <br>
                             <b>TẠI: TRỐNG ĐỒNG PALACE CẢNH HỒ</b>
                             <br>
-                            173B Trường Trinh, Khương Mai, Quận Thanh Xuân, Hà Nội
+                            173B Trường Chinh, Khương Mai, Quận Thanh Xuân, Hà Nội
                         </p>
                         <p class="action-items">
                             <span class="button" style="background-image: url(assets/images/maps.jpg)">
