--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                                 <a href="https://goo.gl/maps/HKofkGEhiU2wNcEZA" target="_blank">Xem bản đồ</a>
                             </span>
                             <span class="button" style="background-image: url(assets/images/calendar.png)">
-                                <a href="https://calendar.google.com/event?action=TEMPLATE&amp;tmeid=MzU5ZmJtYm82NW5ldGJiOWQyaDIxaGxhZDAgZHVuZ2JhLnNnQG0&amp;tmsrc=dungba.sg%40gmail.com" target="_blank">Thêm vào lịch</a>
+                                <a href="https://calendar.google.com/event?action=TEMPLATE&tmeid=MzU5ZmJtYm82NW5ldGJiOWQyaDIxaGxhZDAgM205ZzFxdW5sdm5mMDhlaTBwZjZjMHAwN2tAZw&tmsrc=3m9g1qunlvnf08ei0pf6c0p07k%40group.calendar.google.com" target="_blank">Thêm vào lịch</a>
                             </span>
                         </p>
                     </div>
