--- a/index.html
+++ b/index.html
@@ -6,10 +6,15 @@
     <div class="main">
     </div>
     <div class="video-container">
-        <img src="assets/images/play.webp" class="play" id="play">
         <div class="video-container-inner">
             <div class="frame"></div>
             <div class="video-container-flip-item" id="flip-item">
+                <div class="video-container-box">
+                    <video id="vid" poster="assets/images/thumbnail_1.png">
+                        <source src="https://onedrive.live.com/download?cid=B16FC179C21FE084&resid=B16FC179C21FE084%215106&authkey=ADCbavLanfLytjw" type="video/mp4">
+                    </video>
+                    <img src="assets/images/play.webp" class="play" id="play">
+                </div>
                 <div class="info">
                     <div style="margin: 0 auto">
                         <p>
@@ -37,9 +42,6 @@
                         </p>
                     </div>
                 </div>
-                <video id="vid" poster="assets/images/thumbnail_1.png">
-                    <source src="https://onedrive.live.com/download?cid=B16FC179C21FE084&resid=B16FC179C21FE084%215106&authkey=ADCbavLanfLytjw" type="video/mp4">
-                </video>
             </div>
         </div>
     </div>
