test different fonts

--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
                         <p class="names">
                             Bùi Anh Dũng & Đặng Hoàng Ngân
                         </p>
+                        <p class="names bold">
+                            Bùi Anh Dũng & Đặng Hoàng Ngân
+                        </p>
+                        <p class="names fleur">
+                            Bùi Anh Dũng & Đặng Hoàng Ngân
+                        </p>
                         <p class="address">
                             Vào hồi 11 giờ 00'
                             <br>
