clean-up resources

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                             173B Trường Chinh, Khương Mai, Quận Thanh Xuân, Hà Nội
                         </p>
                         <p class="action-items">
-                            <span class="button" style="background-image: url(assets/images/maps.jpg)">
+                            <span class="button" style="background-image: url(assets/images/maps.png)">
                                 <a href="https://goo.gl/maps/HKofkGEhiU2wNcEZA" target="_blank">Xem bản đồ</a>
                             </span>
                             <span class="button" style="background-image: url(assets/images/calendar.png)">
