--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             <div class="video-container-flip-item" id="flip-item">
                 <div class="video-container-box">
                     <video id="vid" poster="assets/images/thumbnail_1.png" playsinline>
-                        <source src="https://onedrive.live.com/download?cid=B16FC179C21FE084&resid=B16FC179C21FE084%215106&authkey=ADCbavLanfLytjw" type="video/mp4">
+                        <source src="https://github.com/dungba88/mewtzone/releases/download/video-1.0.0/wedding.mp4" type="video/mp4">
                     </video>
                     <img src="assets/images/play.webp" class="play" id="play">
                 </div>
