remove test code

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <div class="video-container" id="container">
         <div class="video-container-inner">
             <div class="frame"></div>
-            <div class="video-container-flip-item flipped" id="flip-item">
+            <div class="video-container-flip-item" id="flip-item">
                 <div class="video-container-box">
                     <video id="vid" poster="assets/images/thumbnail_1.png" playsinline>
                         <source src="https://github.com/dungba88/mewtzone/releases/download/video-1.0.0/wedding.mp4" type="video/mp4">
