add English translation

--- a/index.html
+++ b/index.html
@@ -46,6 +46,18 @@
 
     <script type="text/javascript">
         const langs = {
+            "en": {
+                "text1": "We would love to invite",
+                "guest": "you",
+                "text2": "to our wedding",
+                "text3": "At 11:00AM",
+                "text4": "Friday, 2022/09/23",
+                "text5": "Venue: TRONG DONG PALACE CANH HO",
+                "text6": "173B Truong Chinh, Thanh Xuan District, Hanoi, Vietnam",
+                "text7": "View on map",
+                "text8": "Add to calendar",
+                "names": "Bui Anh Dung & Dang Hoang Ngan"
+            },
             "ja": {
                 "text1": "私たちは",
                 "guest": "あなた",
