--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 "text3": "At 11:00AM",
                 "text4": "Friday, 2022/09/23",
                 "text5": "Venue: TRONG DONG PALACE CANH HO",
-                "text6": "173B Truong Chinh, Thanh Xuan District, Hanoi, Vietnam",
+                "text6": "173B Truong Chinh, Thanh Xuan District, <br>Hanoi, Vietnam",
                 "text7": "View on map",
                 "text8": "Add to calendar",
                 "names": "Bui Anh Dung & Dang Hoang Ngan"
