Being a bit more polite on JA

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             "ja": {
                 "text1": "私たちは",
                 "guest": "あなた",
-                "text2": "を私たちの結婚式に<br>ご招待いたします",
+                "text2": "を私たちの結婚式に<br>ご招待させていただきます",
                 "text3": "日時：午前１１時",
                 "text4": "令和４年９月２３日（金）",
                 "text5": "場所：TRONG DONG PALACE CANH HO",
